--- a/Makefile.in
+++ b/Makefile.in
@@ -336,8 +336,8 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	miniz/miniz.$(OBJEXT) nmt/index.$(OBJEXT) nmt/logic.$(OBJEXT) \
 	tbsx/text.$(OBJEXT) read/index.$(OBJEXT) read/load.$(OBJEXT) \
 	read/verse.$(OBJEXT) resource/divider.$(OBJEXT) \
-	filter/indonesian.$(OBJEXT) session/confirm.$(OBJEXT) \
-	sources/abbott-smith.$(OBJEXT) database/abbottsmith.$(OBJEXT) \
+	session/confirm.$(OBJEXT) sources/abbott-smith.$(OBJEXT) \
+	database/abbottsmith.$(OBJEXT) \
 	resource/comparative9edit.$(OBJEXT) \
 	resource/comparative1edit.$(OBJEXT) \
 	resource/translated9edit.$(OBJEXT) \
@@ -550,51 +550,51 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	filter/$(DEPDIR)/css.Po filter/$(DEPDIR)/date.Po \
 	filter/$(DEPDIR)/diff.Po filter/$(DEPDIR)/git.Po \
 	filter/$(DEPDIR)/google.Po filter/$(DEPDIR)/html.Po \
-	filter/$(DEPDIR)/image.Po filter/$(DEPDIR)/indonesian.Po \
-	filter/$(DEPDIR)/mail.Po filter/$(DEPDIR)/md5.Po \
-	filter/$(DEPDIR)/memory.Po filter/$(DEPDIR)/merge.Po \
-	filter/$(DEPDIR)/note.Po filter/$(DEPDIR)/passage.Po \
-	filter/$(DEPDIR)/roles.Po filter/$(DEPDIR)/shell.Po \
-	filter/$(DEPDIR)/string.Po filter/$(DEPDIR)/text.Po \
-	filter/$(DEPDIR)/url.Po filter/$(DEPDIR)/usfm.Po \
-	filter/$(DEPDIR)/webview.Po flate/$(DEPDIR)/flate.Po \
-	fonts/$(DEPDIR)/logic.Po help/$(DEPDIR)/index.Po \
-	html/$(DEPDIR)/header.Po html/$(DEPDIR)/text.Po \
-	i18n/$(DEPDIR)/logic.Po images/$(DEPDIR)/fetch.Po \
-	images/$(DEPDIR)/index.Po images/$(DEPDIR)/logic.Po \
-	images/$(DEPDIR)/view.Po index/$(DEPDIR)/index.Po \
-	index/$(DEPDIR)/listing.Po ipc/$(DEPDIR)/focus.Po \
-	ipc/$(DEPDIR)/notes.Po jobs/$(DEPDIR)/index.Po \
-	journal/$(DEPDIR)/index.Po journal/$(DEPDIR)/logic.Po \
-	jsonxx/$(DEPDIR)/jsonxx.Po ldap/$(DEPDIR)/logic.Po \
-	lexicon/$(DEPDIR)/definition.Po lexicon/$(DEPDIR)/logic.Po \
-	library/$(DEPDIR)/bibledit.Po library/$(DEPDIR)/locks.Po \
-	locale/$(DEPDIR)/logic.Po locale/$(DEPDIR)/translate.Po \
-	manage/$(DEPDIR)/accounts.Po manage/$(DEPDIR)/exports.Po \
-	manage/$(DEPDIR)/hyphenate.Po manage/$(DEPDIR)/hyphenation.Po \
-	manage/$(DEPDIR)/index.Po manage/$(DEPDIR)/privileges.Po \
-	manage/$(DEPDIR)/users.Po manage/$(DEPDIR)/write.Po \
-	mapping/$(DEPDIR)/index.Po mapping/$(DEPDIR)/map.Po \
-	mbedtls/$(DEPDIR)/aes.Po mbedtls/$(DEPDIR)/arc4.Po \
-	mbedtls/$(DEPDIR)/asn1parse.Po mbedtls/$(DEPDIR)/asn1write.Po \
-	mbedtls/$(DEPDIR)/base64.Po mbedtls/$(DEPDIR)/bignum.Po \
-	mbedtls/$(DEPDIR)/blowfish.Po mbedtls/$(DEPDIR)/camellia.Po \
-	mbedtls/$(DEPDIR)/ccm.Po mbedtls/$(DEPDIR)/certs.Po \
-	mbedtls/$(DEPDIR)/chacha20.Po mbedtls/$(DEPDIR)/chachapoly.Po \
-	mbedtls/$(DEPDIR)/cipher.Po mbedtls/$(DEPDIR)/cipher_wrap.Po \
-	mbedtls/$(DEPDIR)/ctr_drbg.Po mbedtls/$(DEPDIR)/debug.Po \
-	mbedtls/$(DEPDIR)/des.Po mbedtls/$(DEPDIR)/dhm.Po \
-	mbedtls/$(DEPDIR)/ecdh.Po mbedtls/$(DEPDIR)/ecdsa.Po \
-	mbedtls/$(DEPDIR)/ecp.Po mbedtls/$(DEPDIR)/ecp_curves.Po \
-	mbedtls/$(DEPDIR)/entropy.Po mbedtls/$(DEPDIR)/entropy_poll.Po \
-	mbedtls/$(DEPDIR)/error.Po mbedtls/$(DEPDIR)/gcm.Po \
-	mbedtls/$(DEPDIR)/hmac_drbg.Po mbedtls/$(DEPDIR)/md.Po \
-	mbedtls/$(DEPDIR)/md5.Po mbedtls/$(DEPDIR)/md_wrap.Po \
-	mbedtls/$(DEPDIR)/net_sockets.Po mbedtls/$(DEPDIR)/oid.Po \
-	mbedtls/$(DEPDIR)/pem.Po mbedtls/$(DEPDIR)/pk.Po \
-	mbedtls/$(DEPDIR)/pk_wrap.Po mbedtls/$(DEPDIR)/pkcs12.Po \
-	mbedtls/$(DEPDIR)/pkcs5.Po mbedtls/$(DEPDIR)/pkparse.Po \
-	mbedtls/$(DEPDIR)/pkwrite.Po mbedtls/$(DEPDIR)/platform.Po \
+	filter/$(DEPDIR)/image.Po filter/$(DEPDIR)/mail.Po \
+	filter/$(DEPDIR)/md5.Po filter/$(DEPDIR)/memory.Po \
+	filter/$(DEPDIR)/merge.Po filter/$(DEPDIR)/note.Po \
+	filter/$(DEPDIR)/passage.Po filter/$(DEPDIR)/roles.Po \
+	filter/$(DEPDIR)/shell.Po filter/$(DEPDIR)/string.Po \
+	filter/$(DEPDIR)/text.Po filter/$(DEPDIR)/url.Po \
+	filter/$(DEPDIR)/usfm.Po filter/$(DEPDIR)/webview.Po \
+	flate/$(DEPDIR)/flate.Po fonts/$(DEPDIR)/logic.Po \
+	help/$(DEPDIR)/index.Po html/$(DEPDIR)/header.Po \
+	html/$(DEPDIR)/text.Po i18n/$(DEPDIR)/logic.Po \
+	images/$(DEPDIR)/fetch.Po images/$(DEPDIR)/index.Po \
+	images/$(DEPDIR)/logic.Po images/$(DEPDIR)/view.Po \
+	index/$(DEPDIR)/index.Po index/$(DEPDIR)/listing.Po \
+	ipc/$(DEPDIR)/focus.Po ipc/$(DEPDIR)/notes.Po \
+	jobs/$(DEPDIR)/index.Po journal/$(DEPDIR)/index.Po \
+	journal/$(DEPDIR)/logic.Po jsonxx/$(DEPDIR)/jsonxx.Po \
+	ldap/$(DEPDIR)/logic.Po lexicon/$(DEPDIR)/definition.Po \
+	lexicon/$(DEPDIR)/logic.Po library/$(DEPDIR)/bibledit.Po \
+	library/$(DEPDIR)/locks.Po locale/$(DEPDIR)/logic.Po \
+	locale/$(DEPDIR)/translate.Po manage/$(DEPDIR)/accounts.Po \
+	manage/$(DEPDIR)/exports.Po manage/$(DEPDIR)/hyphenate.Po \
+	manage/$(DEPDIR)/hyphenation.Po manage/$(DEPDIR)/index.Po \
+	manage/$(DEPDIR)/privileges.Po manage/$(DEPDIR)/users.Po \
+	manage/$(DEPDIR)/write.Po mapping/$(DEPDIR)/index.Po \
+	mapping/$(DEPDIR)/map.Po mbedtls/$(DEPDIR)/aes.Po \
+	mbedtls/$(DEPDIR)/arc4.Po mbedtls/$(DEPDIR)/asn1parse.Po \
+	mbedtls/$(DEPDIR)/asn1write.Po mbedtls/$(DEPDIR)/base64.Po \
+	mbedtls/$(DEPDIR)/bignum.Po mbedtls/$(DEPDIR)/blowfish.Po \
+	mbedtls/$(DEPDIR)/camellia.Po mbedtls/$(DEPDIR)/ccm.Po \
+	mbedtls/$(DEPDIR)/certs.Po mbedtls/$(DEPDIR)/chacha20.Po \
+	mbedtls/$(DEPDIR)/chachapoly.Po mbedtls/$(DEPDIR)/cipher.Po \
+	mbedtls/$(DEPDIR)/cipher_wrap.Po mbedtls/$(DEPDIR)/ctr_drbg.Po \
+	mbedtls/$(DEPDIR)/debug.Po mbedtls/$(DEPDIR)/des.Po \
+	mbedtls/$(DEPDIR)/dhm.Po mbedtls/$(DEPDIR)/ecdh.Po \
+	mbedtls/$(DEPDIR)/ecdsa.Po mbedtls/$(DEPDIR)/ecp.Po \
+	mbedtls/$(DEPDIR)/ecp_curves.Po mbedtls/$(DEPDIR)/entropy.Po \
+	mbedtls/$(DEPDIR)/entropy_poll.Po mbedtls/$(DEPDIR)/error.Po \
+	mbedtls/$(DEPDIR)/gcm.Po mbedtls/$(DEPDIR)/hmac_drbg.Po \
+	mbedtls/$(DEPDIR)/md.Po mbedtls/$(DEPDIR)/md5.Po \
+	mbedtls/$(DEPDIR)/md_wrap.Po mbedtls/$(DEPDIR)/net_sockets.Po \
+	mbedtls/$(DEPDIR)/oid.Po mbedtls/$(DEPDIR)/pem.Po \
+	mbedtls/$(DEPDIR)/pk.Po mbedtls/$(DEPDIR)/pk_wrap.Po \
+	mbedtls/$(DEPDIR)/pkcs12.Po mbedtls/$(DEPDIR)/pkcs5.Po \
+	mbedtls/$(DEPDIR)/pkparse.Po mbedtls/$(DEPDIR)/pkwrite.Po \
+	mbedtls/$(DEPDIR)/platform.Po \
 	mbedtls/$(DEPDIR)/platform_util.Po \
 	mbedtls/$(DEPDIR)/poly1305.Po mbedtls/$(DEPDIR)/ripemd160.Po \
 	mbedtls/$(DEPDIR)/rsa.Po mbedtls/$(DEPDIR)/rsa_internal.Po \
@@ -1476,7 +1476,6 @@ libbibledit_a_SOURCES = \
   read/load.cpp \
   read/verse.cpp \
   resource/divider.cpp \
-  filter/indonesian.cpp \
   session/confirm.cpp \
   sources/abbott-smith.cpp \
   database/abbottsmith.cpp \
@@ -3142,8 +3141,6 @@ read/verse.$(OBJEXT): read/$(am__dirstamp) \
 	read/$(DEPDIR)/$(am__dirstamp)
 resource/divider.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
-filter/indonesian.$(OBJEXT): filter/$(am__dirstamp) \
-	filter/$(DEPDIR)/$(am__dirstamp)
 session/confirm.$(OBJEXT): session/$(am__dirstamp) \
 	session/$(DEPDIR)/$(am__dirstamp)
 sources/abbott-smith.$(OBJEXT): sources/$(am__dirstamp) \
@@ -3814,7 +3811,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/google.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/html.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/image.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/indonesian.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/mail.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/md5.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@filter/$(DEPDIR)/memory.Po@am__quote@ # am--include-marker
@@ -4983,7 +4979,6 @@ distclean: distclean-am
 	-rm -f filter/$(DEPDIR)/google.Po
 	-rm -f filter/$(DEPDIR)/html.Po
 	-rm -f filter/$(DEPDIR)/image.Po
-	-rm -f filter/$(DEPDIR)/indonesian.Po
 	-rm -f filter/$(DEPDIR)/mail.Po
 	-rm -f filter/$(DEPDIR)/md5.Po
 	-rm -f filter/$(DEPDIR)/memory.Po
@@ -5634,7 +5629,6 @@ maintainer-clean: maintainer-clean-am
 	-rm -f filter/$(DEPDIR)/google.Po
 	-rm -f filter/$(DEPDIR)/html.Po
 	-rm -f filter/$(DEPDIR)/image.Po
-	-rm -f filter/$(DEPDIR)/indonesian.Po
 	-rm -f filter/$(DEPDIR)/mail.Po
 	-rm -f filter/$(DEPDIR)/md5.Po
 	-rm -f filter/$(DEPDIR)/memory.Po
