Use gtest via autotools
https://github.com/bibledit/cloud/issues/910

--- a/Makefile.am
+++ b/Makefile.am
@@ -640,6 +640,7 @@ AM_CXXFLAGS += $(UTF8PROC_CFLAGS)
 AM_CXXFLAGS += $(GUMBO_CFLAGS)
 # AM_CXXFLAGS += $(TIDY_CFLAGS) -I/usr/include/tidy
 AM_CXXFLAGS += $(PUGIXML_CFLAGS)
+AM_CXXFLAGS += $(GTEST_CFLAGS)
 
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl
 LIBS += $(CURL_LIBS)
@@ -652,6 +653,7 @@ LIBS += $(UTF8PROC_LIBS)
 LIBS += $(GUMBO_LIBS)
 # LIBS += $(TIDY_LIBS)
 LIBS += $(PUGIXML_LIBS)
+LIBS += $(GTEST_LIBS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
