--- a/Makefile.in
+++ b/Makefile.in
@@ -936,6 +936,8 @@ ECHO_T = @ECHO_T@
 ETAGS = @ETAGS@
 EXEEXT = @EXEEXT@
 FIND_TAR = @FIND_TAR@
+GTEST_CFLAGS = @GTEST_CFLAGS@
+GTEST_LIBS = @GTEST_LIBS@
 GUMBO_CFLAGS = @GUMBO_CFLAGS@
 GUMBO_LIBS = @GUMBO_LIBS@
 GUNZIP_PATH = @GUNZIP_PATH@
@@ -954,7 +956,8 @@ LIBOBJS = @LIBOBJS@
 # LIBS += $(TIDY_LIBS)
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl $(CURL_LIBS) \
 	$(OPENSSL_LIBS) $(GTK_LIBS) $(WEBKIT2GTK_LIBS) $(ICU_LIBS) \
-	$(XML2_LIBS) $(UTF8PROC_LIBS) $(GUMBO_LIBS) $(PUGIXML_LIBS)
+	$(XML2_LIBS) $(UTF8PROC_LIBS) $(GUMBO_LIBS) $(PUGIXML_LIBS) \
+	$(GTEST_LIBS)
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -1650,7 +1653,8 @@ AM_CFLAGS = -g $(OPENSSL_CFLAGS) $(am__append_1)
 AM_CXXFLAGS = -fno-var-tracking -g $(am__append_2) $(am__append_3) \
 	$(CURL_CFLAGS) $(OPENSSL_CFLAGS) $(GTK_CFLAGS) \
 	$(WEBKIT2GTK_CFLAGS) $(ICU_CFLAGS) $(XML2_CFLAGS) \
-	$(UTF8PROC_CFLAGS) $(GUMBO_CFLAGS) $(PUGIXML_CFLAGS)
+	$(UTF8PROC_CFLAGS) $(GUMBO_CFLAGS) $(PUGIXML_CFLAGS) \
+	$(GTEST_CFLAGS)
 
 # The core library compiles and embeds the mbedtls library.
 # On Debian this gives a lintian error:
