--- a/config.h.in
+++ b/config.h.in
@@ -21,7 +21,7 @@
 /* Define whether to compile for iOS */
 #undef HAVE_IOS
 
-/* Define to 1 if you have the `mbedtls' library (-lmbedtls). */
+/* Define to 1 if you have the 'mbedtls' library (-lmbedtls). */
 #undef HAVE_LIBMBEDTLS
 
 /* Define whether libproc.h is present */
@@ -105,7 +105,7 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define to 1 if all of the C90 standard headers exist (not just the ones
+/* Define to 1 if all of the C89 standard headers exist (not just the ones
    required in a freestanding environment). This macro is provided for
    backward compatibility; new code need not use it. */
 #undef STDC_HEADERS
