--- a/configure.ac
+++ b/configure.ac
@@ -120,8 +120,7 @@ AC_MSG_CHECKING([whether stoi is available])
 AC_COMPILE_IFELSE(
 [AC_LANG_SOURCE([[
 #include <string>
-using namespace std;
-int i = stoi ("string");
+int i = std::stoi ("string");
   ]])],
   [AC_DEFINE([HAVE_STOI], [1], [Define whether function 'stoi' is available])
    AC_MSG_RESULT([yes])],
